--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,3 +162,89 @@ footer {
     padding: 25px;
     border-top: solid lightskyblue 5px;
 }
+@media screen and (max-width: 768px) {
+    header {
+        position:static;
+    }
+    body {
+      background-color: lightseagreen;
+    }
+    #box, #box2, #box3 {
+        width:50%;
+        color: lightgrey;
+        height: 80%;
+        margin-left: 50px;
+        margin-right: 50px;
+        margin-top: 50px;
+        margin-bottom:50px;
+        position: relative;
+    }
+}
+@media screen and (max-width: 640px) {
+    header {
+        position:static;
+    }
+    body {
+      background-color: lightsalmon;
+    }
+    #box, #box2, #box3 {
+        width:80%;
+        color: lightgreen;
+        height: 100%;
+        margin-left: 50px;
+        margin-right: 50px;
+        margin-top: 50px;
+        margin-bottom:50px;
+        position: relative;
+    }
+    .box {
+        position: relative;
+        width:50%;
+        height:50%;
+    }
+    .legend {
+        position: relative;
+    }
+}
+img {
+    float:left;
+    padding: 3px 30px 30px 0px;
+    position: relative;
+    animation-name: example;
+    animation-duration: 5s;
+    animation-timing-function: linear;
+    animation-delay: 2s;
+    animation-iteration-count: 2;
+    animation-direction: alternate;
+  }
+  @keyframes example {
+    0%   {left:0px; top:0px;}
+    25%  {left:200px; top:0px;}
+    50%  {left:200px; top:200px;}
+    75%  {left:0px; top:200px;}
+    100% {left:0px; top:0px;}
+  }
+  .legend {
+    position: absolute;
+    z-index: auto;
+    background-color: black;
+    text-align: center;
+    padding:20px;
+    top: 100px;
+    width: 140px;
+    float:left;
+    position: absolute;
+    animation-name: example;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-delay: 1s;
+    animation-iteration-count: 1;
+    animation-direction: alternate;
+ }
+  @keyframes example {
+    0%   {left:0px; top:0px;}
+    25%  {left:200px; top:0px;}
+    50%  {left:200px; top:200px;}
+    75%  {left:0px; top:200px;}
+    100% {left:0px; top:0px;}
+}
